# prediction-market

./: .gitignore  README.md  discord_update.js  edit_local.js  exchange.py  market_detail.js  market_func.js  menus.js  pyproject.toml  read_remote.js  requirements.txt  tests.js
discord_bot/: .env  computation.py  main.py  market_description.py  permissions.py  registration.py  run.py  status.py  trade.py  try_except.py
legacy_spreadsheets/: edit_remote.js  excel_tsvs_to_json.py  tests.js
market/: exchange.py  ledger.py
migration/: excel_tsvs_to_json.py
src/discord_bot/: main.py
